# voip_patrol

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  QUICK_START.md  README.md  cmake_install.cmake  conf.xml  conf.xml.tpl  perf1.json  perf1.json.pjsua  results.json  results.json.pjsua
docker/: Dockerfile  Dockerfile.arm  build_image.sh  build_image_arm.sh  entry.sh  voip_patrol_demo.sh
docker/xml/: demo_server.xml
include/: config_site.h  config_site_arm.h  user.mak
include/pjproject/pjlib/include/pj/: config.h.arm  config_site.h.arm
load_test/: LOAD_TEST.md  Untitled-1  load.xml  run.sh  run_sbc_load.sh  sbc_load.xml
xml/: basic_server.xml  udp_server.xml
